Added the CLI renderer and wired it into the processor with per‑transport handling (REST vs gRPC) and @PipelineOrchestrator(generateCli) gating. Updated the annotation and CLI renderer to carry name/description/version and documented the move away from build‑time config. Added a short annotation example and CLI JSON input expectations with examples to docs/guide/build/configuration/index.md.
Signed-off-by: mariano.barcia <mariano.barcia@gmail.com>